--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -1,17 +1,111 @@
-/*----------------header content-------------*/
-header{
-    background: linear-gradient(135.00deg, rgb(204, 74, 250) 0%,rgb(225, 250, 74) 100%); 
-  }
-  #header-txt{
-    font-family: Jura;
-    font-weight: 900;
-    line-height: normal;
-    letter-spacing: 0%;
-    font-size: 48px;
-    text-align: center;
-    font-style: normal;
-  }
-  #header-btn{
-    border-radius: 44px;
-    font-family: Jura;
-  }
+@font-face {
+  font-family: Inter;
+  src: url(../fonts/Inter-Black.otf);
+}
+@font-face {
+  font-family: Jura;
+  src: url(../fonts/Jura.ttf);
+}
+
+.header {
+  transition: background 0.5s ease;
+  background-size: 200% 200%;
+  background-image: linear-gradient(
+    135deg,
+    rgb(121, 13, 167) 0%,
+    rgb(237, 189, 98) 100%
+  );
+}
+.dark {
+  background-position: 0%;
+}
+.light {
+  background-position: 100%;
+}
+
+#header-txt {
+  font-family: Jura;
+  font-weight: 900;
+  line-height: normal;
+  letter-spacing: 0%;
+  font-size: 48px;
+  text-align: center;
+  font-style: normal;
+  width: 12%;
+}
+#gallery-txt {
+  font-family: Jura;
+  font-weight: 900;
+  line-height: normal;
+  letter-spacing: 0%;
+  font-size: 32px;
+  text-align: center;
+  font-style: normal;
+  width: 10%;
+  margin-top: auto;
+}
+
+.theme-switcher {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.log {
+  height: 40px;
+  width: 90px;
+}
+.reg {
+  height: 40px;
+  width: 120px;
+}
+.theme-switcher img {
+  width: 100%;
+  height: auto;
+  transform: scale(180%);
+  margin-top: -5%;
+}
+.btn .log-text {
+  font-family: Jura;
+  font-size: 20px;
+}
+.btn .reg-text {
+  font-family: Jura;
+  font-size: 20px;
+}
+
+/*----------------- search form -------------*/
+.input-group {
+  width: 40% !important;
+}
+.dark.form-control,
+.light.form-control {
+  transition: background-color 0.5s ease, border-color 0.5s ease;
+}
+.form-control::placeholder {
+  transition: color 0.5s ease;
+}
+.dark.form-control {
+  background: rgb(50, 50, 50) !important;
+  border-color: rgb(100, 100, 100) !important;
+}
+.light.form-control {
+  background: rgb(250, 234, 210) !important;
+  border-color: rgb(0, 0, 0) !important;
+}
+.dark.form-control::placeholder {
+  color: rgb(146, 146, 146) !important;
+}
+.light.form-control::placeholder {
+  color: rgb(41, 41, 41) !important;
+}
+.dark.form-control:focus {
+  color: rgb(146, 146, 146) !important;
+}
+.light.form-control:focus {
+  color: rgb(41, 41, 41) !important;
+}
+.search-ico {
+  width: 60%;
+  height: auto;
+  border: none;
+}
