--- a/resources/css/modal.css
+++ b/resources/css/modal.css
@@ -112,7 +112,7 @@
   border: 1px solid rgb(0, 0, 0);
   border-radius: 23px;
   font-family: Inter M;
-  font-size: 18px;
+  font-size: 130%;
   font-weight: 300;
 }
 
