--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -23,6 +23,10 @@
   background-position: 100%;
 }
 
+.select2-selection {
+  height: 100%;
+}
+
 #header-txt {
   font-family: Jura;
   font-weight: 900;
