--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -28,3 +28,7 @@ footer {
     flex: 0 0 auto!important; /* Фиксированный размер футера */
     /* Дополнительные стили футера */
 }
+#exit{
+    border-radius: 15px;
+    
+}
